src/test/deca/syntax/invalid/created/FloatUnderflow.deca
{
    float a = 0.4E-45;
}